[package]
name = "rwsbl"
version = "0.1.0"
authors = ["Leonardo Vencovsky <leonardo.vencovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
regex = "1.3"
scraper = "0.12"
url = "2"
